--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.9",
-    "axios": "^1.6.7",
+    "@types/axios": "^0.14.4",
+    "axios": "^1.7.7",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.1",
     "sweetalert2": "^11.10.5",
@@ -24,6 +25,7 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.39.5",
+    "@types/babel__core": "^7.20.5",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vue/compiler-sfc": "^3.3.4",
     "autoprefixer": "^10.4.14",
