--- a/.env
+++ b/.env
@@ -1,19 +1,19 @@
 APP_NAME=Laravel
-APP_ENV=production
-APP_KEY=base64:wQzBuBwENpa9Hpa7ZP2P4TSk7v7NL8h6lLnAPaNwC70=
-APP_DEBUG=false
-APP_URL=https://farmaciaesperanza.top
+APP_ENV=local
+APP_KEY=base64:OTNyveeD3yK0oRou9x1TTa4wTjmlyWsAZbCwAEljWAI=
+APP_DEBUG=true
+APP_URL=http://localhost:3000
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=46.202.93.129
+DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=clinicaeconomica
 DB_USERNAME=root
-DB_PASSWORD=Amanecerdel33
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
