--- a/.env
+++ b/.env
@@ -28,6 +28,8 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
+VUE_APP_API_URL=http://46.202.93.129:3000/api/v1
+
 MAIL_MAILER=smtp
 MAIL_HOST=mailhog
 MAIL_PORT=1025
