--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "devDependencies": {
     "@antfu/eslint-config": "^0.39.5",
     "@types/babel__core": "^7.20.5",
+    "@types/node": "^22.9.1",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vue/compiler-sfc": "^3.3.4",
     "autoprefixer": "^10.4.14",
